--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
     <meta charset="utf-8">
     <title>Snake</title>
     <link rel="stylesheet" type="text/css" href="./css/snake.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="./js/fiefDOM.js"   charset="utf-8"></script>
     <script src="./js/bundle.js"></script>
+    <script src="https://use.fontawesome.com/612adf211d.js"></script>
   </head>
 
   <body>
-    <h1>Snake</h1>
-    <div class="play-container">
-      <div class='play'>Play</div>
-      <div class='score-outer'><span>Score:</span> <span class='score'></span></div>
-    </div>
-    <figure class="snake-game"></figure>
+    <header>
+      <div class='header-content'>
+        <h1>Snake</h1>
+        <div class="play-container">
+          <div class='play'><span>Play</span></div>
+          <div class='score-outer'><span>Score:</span><span class='score'></span></div>
+        </div>
+      </div>
+    </header>
 
+    <figure class="snake-game"></figure>
+    <footer>
+      <p>This implementation of Snake was built with <a class="source" href="https://github.com/nabchar/FiefDOM">FiefDOM</a>, a custom DOM manipulation library. </p>
+      <ul class="icons">
+					<li><a href="https://www.linkedin.com/in/nicholaschar/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					<li><a href="https://angel.co/nabchar"><i class="fa fa-angellist" aria-hidden="true"></i></a></li>
+					<li><a href="https://github.com/nabchar"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+					<li><a href="mailto:nicholas.ab.char@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+					<li><a href="assets/files/resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a></li>
+      </ul>
+			<p>&copy; Nicholas A.B. Char</p>
+    </footer>
   </body>
 </html>
