--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     </header>
 
     <figure class="snake-game"></figure>
+
+    <div class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img class="game_over"></img>
+      </div>
+    </div>
+
     <footer>
       <p>This implementation of Snake was built with <a class="source" href="https://github.com/nabchar/FiefDOM">FiefDOM</a>, a custom DOM manipulation library. </p>
       <ul class="icons">
