Update resume, have links open in new tab

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <footer>
       <p>This implementation of Snake was built with <a class="source" href="https://github.com/nabchar/FiefDOM">FiefDOM</a>, a custom DOM manipulation library. </p>
       <ul class="icons">
-					<li><a href="https://www.linkedin.com/in/nicholaschar/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-					<li><a href="https://angel.co/nabchar"><i class="fa fa-angellist" aria-hidden="true"></i></a></li>
-					<li><a href="https://github.com/nabchar"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-					<li><a href="mailto:nicholas.ab.char@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-					<li><a href="assets/files/resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/nicholaschar/" target="_blank" ><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					<li><a href="https://angel.co/nabchar" target="_blank" ><i class="fa fa-angellist" aria-hidden="true"></i></a></li>
+					<li><a href="https://github.com/nabchar" target="_blank" ><i class="fa fa-github" aria-hidden="true"></i></a></li>
+					<li><a href="mailto:nicholas.ab.char@gmail.com" target="_blank" ><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+					<li><a href="assets/files/resume.pdf" target="_blank" ><i class="fa fa-file" aria-hidden="true"></i></a></li>
       </ul>
 			<p>&copy; Nicholas A.B. Char</p>
     </footer>
